--- a/WebUI/Views/Shared/_Layout.cshtml
+++ b/WebUI/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Mannschaft" asp-action="Index">Mannschaften</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Person" asp-action="Index">Personen</a>
+                        </li>
                         <li class="nav-item"><a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MyClaims">My Claims</a></li>
                         @if (User.Identity.IsAuthenticated)
                         {
