--- a/WebUI/Views/Person/Index.cshtml
+++ b/WebUI/Views/Person/Index.cshtml
@@ -8,7 +8,8 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="CreateTrainer" asp-route-mannschaftId="@ViewData["mannschaftId"]">Create New Trainer</a><br />
+    <a asp-action="CreateSpieler" asp-route-mannschaftId="@ViewData["mannschaftId"]">Create New Spieler</a>
 </p>
 <table class="table">
     <thead>
