--- a/WebUI/Views/Account/Login.cshtml
+++ b/WebUI/Views/Account/Login.cshtml
@@ -2,6 +2,7 @@
 
 <div class="row">
     <div class="col-md-8">
+        <div class="text-warning">@ViewData["status"]</div>
         <section>
             <div class="text-danger">@ViewData["ErrorMessage"]</div>
             <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal" role="form">
